--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_temp_logo"
+        android:icon="@drawable/ic_baju_logo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_temp_logo"
+        android:roundIcon="@drawable/ic_baju_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".homescreen.HomeScreenActivity"
