--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_baju_logo"
+        android:icon="@drawable/ic_baju_app"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_baju_logo"
+        android:roundIcon="@drawable/ic_baju_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.FirebaseAuthLoginActivity"></activity>
+        <activity android:name=".login.FirebaseAuthLoginActivity" />
         <activity
             android:name=".homescreen.HomeScreenActivity"
             android:screenOrientation="portrait" />
