--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@drawable/ic_baju_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".login.CreateAccountActivity"></activity>
         <activity android:name=".login.FirebaseAuthLoginActivity" />
         <activity
             android:name=".homescreen.HomeScreenActivity"
