--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mx.bajun">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_baju_app"
@@ -9,8 +12,12 @@
         android:roundIcon="@drawable/ic_baju_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.CreateAccountActivity"></activity>
-        <activity android:name=".login.FirebaseAuthLoginActivity" />
+        <activity
+            android:name=".login.CreateAccountActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".login.FirebaseAuthLoginActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".homescreen.HomeScreenActivity"
             android:screenOrientation="portrait" />
